default.css
body {
	/* No margin so that videos have no space to the edge of the window */
	margin: 0px;
	/* Make sure there won't be scroll bars since videos will resize automatically */
	overflow: hidden;
}

#user_interface {
	overflow: hidden;
	display: none;
}

#controls_container {
	display: flex;
}

.controls{
	margin: 10px;
}

#help_text {
	margin-left: 10px;
}

#add_session, #add_video {
	background-color: LightGreen;
	border: 1px solid black;
	float: right;
	padding: 2px;
	display: flex;
	align-items: center;
	/*height: 25px;
	width: 25px;*/
}

#session_table_container, #video_table_container {
	max-height: 100px;
	overflow: auto;
	float: left;
}

#session_table {
	width: 95px;
}

#video_table {
	width: 190px;
}

#session_table, #video_table {
	border-collapse: collapse;
}

#session_table, #video_table, th, td {
	padding-right: 0px;
}

.delete_session_button, .remove_video_button {
	background-color: Tomato;
	border: 1px solid black;
	padding: 2px;
	float: right;
	display: flex;
	align-items: center;
}

.session_radio_button, .video_visibility_checkbox{
	/* height: 25px;
	width: 25px; */
}

.video_offset_text {
	width: 50px;
	background-color: transparent;
	border: 1px solid black;
	text-align: right;
}

#seek_time {
	text-align: right;
}

.active_video, .active_session {
	background-color: orange;
}

#draggable_controls_fixed {
	flex-grow: 100;
}

#draggable_controls_container {
	display: none;
	position: fixed;
	top: 0px;
	left: 0px;
	z-index: 101;
	width: 90vw;
	margin: 10px;
	opacity: 0.6;
	background-color: white;
	border: 1px solid white;
	border-radius: 8px;
}

#draggable_controls {
	padding: 5px;
}

#button_group {
	border: 2px solid black;
	display: inline-block;
	float: left;
}

#playpause, #resync, #toggle_ui {
	height: 50px;
	width: 65px;
	color: black;
	float: left;
	display: inline-block;
	border: none;
	text-align: center;
	border-right: 2px solid black;
}

#toggle_ui {
	border-right: none;
}

#play_svg, #pause_svg {
	fill: black;
	display: block;
	margin: auto;
}

#seek_slider {
	width: 100%;
}

#centered_content {
	background-color: black;
}

#videosdisplay {
	overflow: hidden;
}

iframe {
	/* Videos need to float so there is no space between them vertically */
	float: left;
}

